--- a/bin/gui/scenes/HTP2.fxml
+++ b/bin/gui/scenes/HTP2.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameOverviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.HTP2">
    <children>
       <ImageView fitHeight="470.0" fitWidth="850.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@../../../../../Downloads/code%20breaker%20%20(4).png" />
+            <Image url="@../../gui/img/HTP2.png" />
          </image>
       </ImageView>
-      <Button layoutX="397.0" layoutY="311.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next" />
+      <Button layoutX="397.0" layoutY="328.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next" />
    </children>
 </AnchorPane>
