--- a/bin/gui/scenes/GameOverview.fxml
+++ b/bin/gui/scenes/GameOverview.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameOverview">
    <children>
@@ -12,6 +13,9 @@
             <Image url="@../../gui/img/GameOverview.png" />
          </image>
       </ImageView>
-      <Button layoutX="397.0" layoutY="311.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next" />
+      <Button layoutX="387.0" layoutY="311.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="NEXT">
+         <font>
+            <Font name="SansSerif Bold" size="15.0" />
+         </font></Button>
    </children>
 </AnchorPane>
