--- a/src/gui/scenes/SelectGameMode.fxml
+++ b/src/gui/scenes/SelectGameMode.fxml
@@ -6,14 +6,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.HTP2">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.SelectGameMode">
    <children>
       <ImageView fitHeight="470.0" fitWidth="850.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@../../gui/img/HTP2.png" />
+            <Image url="@../img/SelectGameMode.png" />
          </image>
       </ImageView>
-      <Button layoutX="393.0" layoutY="338.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="NEXT">
+      <Button layoutX="306.0" layoutY="264.0" mnemonicParsing="false" onAction="#onGuessModeClick" text="GUESS">
+         <font>
+            <Font name="SansSerif Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="447.0" layoutY="264.0" mnemonicParsing="false" onAction="#onCreateModeClick" text="CREATE">
          <font>
             <Font name="SansSerif Bold" size="12.0" />
          </font>
