--- a/bin/codebreaker/gui/fxml/SelectDifficultyLevel.fxml
+++ b/bin/codebreaker/gui/fxml/SelectDifficultyLevel.fxml
@@ -7,24 +7,24 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.SelectDifficultyLevel">
+<AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.SelectDifficultyLevel">
    <children>
-      <ImageView fitHeight="470.0" fitWidth="850.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="img" fitHeight="470.0" fitWidth="810.0" layoutX="13.0" layoutY="144.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.375" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="206.0">
          <image>
             <Image url="@../img/SelectDifficultyLevel.png" />
          </image>
       </ImageView>
-      <Button layoutX="260.0" layoutY="264.0" mnemonicParsing="false" onAction="#onEasyLevelClick" text="EASY">
+      <Button layoutX="263.0" layoutY="463.0" mnemonicParsing="false" onAction="#onEasyLevelClick" text="EASY">
          <font>
             <Font name="SansSerif Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="385.0" layoutY="264.0" mnemonicParsing="false" onAction="#onMediumLevelClick" text="MEDIUM">
+      <Button layoutX="386.0" layoutY="463.0" mnemonicParsing="false" onAction="#onMediumLevelClick" text="MEDIUM">
          <font>
             <Font name="SansSerif Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="527.0" layoutY="264.0" mnemonicParsing="false" onAction="#onHardLevelClick" text="HARD">
+      <Button layoutX="524.0" layoutY="463.0" mnemonicParsing="false" onAction="#onHardLevelClick" text="HARD">
          <font>
             <Font name="SansSerif Bold" size="12.0" />
          </font>
