--- a/src/codebreaker/gui/fxml/EnterUsername.fxml
+++ b/src/codebreaker/gui/fxml/EnterUsername.fxml
@@ -7,15 +7,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.EnterUsername">
+<AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.EnterUsername">
    <children>
-      <ImageView fitHeight="470.0" fitWidth="850.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="img" fitHeight="470.0" fitWidth="810.0" layoutX="13.0" layoutY="144.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.375" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="206.0">
          <image>
             <Image url="@../../gui/img/EnterUsername.png" />
          </image>
       </ImageView>
-      <TextField fx:id="usernameField" layoutX="341.0" layoutY="278.0" prefHeight="25.0" prefWidth="150.0" />
-      <Button fx:id="submit" layoutX="387.0" layoutY="320.0" mnemonicParsing="false" onAction="#submit" text="SUBMIT">
+      <TextField fx:id="usernameField" layoutX="346.0" layoutY="477.0" prefHeight="25.0" prefWidth="150.0" />
+      <Button fx:id="submit" layoutX="387.0" layoutY="512.0" mnemonicParsing="false" onAction="#submit" text="SUBMIT">
          <font>
             <Font name="SansSerif Bold" size="12.0" />
          </font></Button>
