--- a/src/codebreaker/gui/fxml/HTP2.fxml
+++ b/src/codebreaker/gui/fxml/HTP2.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.HTP2">
+<AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="codebreaker.controllers.HTP2">
    <children>
-      <ImageView fitHeight="470.0" fitWidth="850.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="img" fitHeight="470.0" fitWidth="810.0" layoutX="13.0" layoutY="144.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.375" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="206.0">
          <image>
             <Image url="@../../gui/img/HTP2.png" />
          </image>
       </ImageView>
-      <Button layoutX="387.0" layoutY="326.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="NEXT">
+      <Button layoutX="396.0" layoutY="516.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="NEXT">
          <font>
-            <Font name="SansSerif Bold" size="15.0" />
+            <Font name="SansSerif Bold" size="12.0" />
          </font>
       </Button>
    </children>
