--- a/src/mastermind/gui/fxml/GameBoard.fxml
+++ b/src/mastermind/gui/fxml/GameBoard.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mastermind.controllers.GameBoard">
@@ -48,14 +49,14 @@
         <rowConstraints>
             <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="58.5" minHeight="10.0" prefHeight="41.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="59.5" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="52.5" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="57.5" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="82.0" minHeight="8.5" prefHeight="45.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="73.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="45.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="45.5" minHeight="10.0" prefHeight="45.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="42.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="46.5" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
       <GridPane fx:id="createGrid" layoutX="357.0" layoutY="481.0" prefHeight="49.0" prefWidth="136.0">
@@ -97,6 +98,14 @@
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Text id="text" layoutX="232.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="351.13671875" />
+      <Text id="text" fx:id="text" layoutX="339.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.63671875">
+         <font>
+            <Font size="11.0" />
+         </font></Text>
+      <Button fx:id="nextButton" layoutX="514.0" layoutY="493.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
